Add in basic UI and start implementing basic search

--- a/cocktail-web/src/App.css
+++ b/cocktail-web/src/App.css
@@ -1,38 +1,29 @@
-.App {
+.list-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.cocktail {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  font-family: 'Avenir Next', 'Avenir';
+  width: 380px;
+  margin: 50px;
+  padding: 80px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.1), 0px 10px 20px #E2DBE8;
+}
+
+.cocktail > h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cocktail-item {
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item-key {
+  font-weight: bold;
 }
