--- a/cocktail-web/src/App.css
+++ b/cocktail-web/src/App.css
@@ -16,6 +16,10 @@
   box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.1), 0px 10px 20px #E2DBE8;
 }
 
+.cocktail-item {
+  margin-top: 0.5em;
+}
+
 .cocktail > h1 {
   text-align: center;
 }
