bullet wrap align

--- a/cocktail-web/src/App.css
+++ b/cocktail-web/src/App.css
@@ -35,23 +35,32 @@
   margin-top: 0.5em;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   gap: 0.6em;
 }
 
-.ingredient > .outer-bullet {
+.ingredient > .bullet-container {
   width: 9px;
-  height: 9px;
-  display: inline;
-  background: black;
-  border-radius: 9px;
+  height: 1.5em;
   position: relative;
 }
 
-.outer-bullet > .inner-bullet {
+.ingredient > .bullet-container > .outer-bullet {
+  width: 9px;
+  height: 9px;
+  background: black;
+  border-radius: 9px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.ingredient > .bullet-container > .outer-bullet > .inner-bullet {
   width: 2px;
   height: 2px;
-  display: inline;
   background: transparent;
   border: solid white 3px;
   border-radius: 10px;
