--- a/cocktail-web/src/App.css
+++ b/cocktail-web/src/App.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 100px;
+  margin: 100px;
 }
 
 .cocktail {
@@ -9,9 +12,8 @@
   flex-direction: column;
   background-color: white;
   font-family: 'Avenir Next', 'Avenir';
-  width: 380px;
-  margin: 50px;
-  padding: 80px;
+  width: 250px;
+  padding: 30px;
   background: #FFFFFF;
   box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.1), 0px 10px 20px #E2DBE8;
 }
