--- a/cocktail-web/src/App.css
+++ b/cocktail-web/src/App.css
@@ -1,22 +1,66 @@
+.app {
+  height: 100vh;
+  width: 100vw;
+}
+
+.App-header {
+  height: 50px;
+}
+
 .list-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
   gap: 100px;
-  margin: 100px;
+  padding: 100px;
+  align-items: flex-end;
+  box-sizing: border-box;
+  height: calc(100vh - 50px);
+  overflow-x: auto;
+}
+
+.cocktail:first-child {
+  margin-left: calc(50% - 156px);
 }
 
 .cocktail {
+  position: relative;
+}
+
+.cock-box {
+  box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.1), 0px 10px 20px #E2DBE8;
+  background: #FFFFFF;
+  background-color: white;
+  padding-bottom: 1px;
+}
+
+.cock-display-stand {
+  height: 100px;
+}
+
+.cock-box-info {
   display: flex;
   flex-direction: column;
-  background-color: white;
   font-family: 'Avenir Next', 'Avenir';
   width: 250px;
-  padding: 30px;
-  background: #FFFFFF;
-  box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.1), 0px 10px 20px #E2DBE8;
-  margin-top: 330px;
+  height: 25vh;
+  padding: 5px 20px 20px;
+  margin: 10px;
+  overflow-y: auto;
+  border: black dashed 1px;
+}
+
+.cock-box-info::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.cock-box-info::-webkit-scrollbar:vertical {
+  width: 10px;
+}
+
+.cock-box-info::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  border: 2px solid white; /* should match background, can't be transparent */
+  background-color: rgba(0, 0, 0, .5);
 }
 
 .cocktail-item {
@@ -25,7 +69,7 @@
   gap: 5px;
 }
 
-.cocktail > h1 {
+.cocktail-name {
   text-align: center;
 }
 
@@ -87,22 +131,19 @@
 
 .marg-display {
   position: relative;
-  bottom: 330px;
-  margin-bottom:-300px;
+  bottom: -100px;
 }
 
 
 .lowball-display {
   position: relative;
-  bottom: 240px;
-  margin-bottom:-220px;
+  bottom: -100px;
 }
 
 
 .martini-display {
   position: relative;
-  bottom: 330px;
-  margin-bottom:-300px;
+  bottom: -100px;
 }
 
 .marg-display > svg {
