--- a/cocktail-web/src/App.css
+++ b/cocktail-web/src/App.css
@@ -40,7 +40,7 @@
   font-family: 'Avenir Next', 'Avenir';
   font-size: 12pt;
   border: none;
-  box-shadow: 0px 2px 5px rgba(121, 121, 121, 0.1), 0px 5px 10px #E2DBE8;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 50px;
 }
 
@@ -68,7 +68,7 @@
 }
 
 .cock-box {
-  box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.1), 0px 10px 20px #E2DBE8;
+  box-shadow: 0px 4px 10px 5px rgba(0, 0, 0, 0.1);
   background: #FFFFFF;
   background-color: white;
   padding-bottom: 1px;
